# HD-Music-Player-Rust-CLI

./: .gitignore  Cargo.toml  README.md
examples/: config_demo.rs
src/: error.rs  error_recovery.rs  integration_tests.rs  lib.rs  logging.rs  main.rs  models.rs
src/audio/: buffer.rs  device.rs  engine.rs  gapless.rs  memory.rs  metadata.rs  mod.rs  performance.rs  position.rs  resampler.rs
src/audio/decoders/: alac.rs  flac.rs  m4a.rs  mod.rs  mp3.rs  ogg.rs  wav.rs
src/audio/tests/: gapless_integration.rs  mod.rs  performance_tests.rs
src/cli/: mod.rs  status.rs  tests.rs
src/config/: mod.rs
src/queue/: mod.rs  playlist.rs
